--- a/final project/templates/index.html
+++ b/final project/templates/index.html
@@ -241,7 +241,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.3/socket.io.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
-            var socket = io.connect('http://' + document.domain + ':' + location.port);
+            var socket = io();
             var form = document.getElementById('form');
             var input = document.getElementById('message');
             var messages = document.getElementById('messages');
