--- a/final project/templates/index.html
+++ b/final project/templates/index.html
@@ -111,13 +111,14 @@
     <div class="main">
         <details>
             <summary><p id="javascript"><span id="arrow2">▶</span>Javascript</p></summary>
-            this is Javascript.
+            JavaScript is a programming language that enables dynamic content and interactivity on websites.<br>
+            JavaScript works beside HTML and CSS to create fantastical web pages.
             <br><br><br> <h5>If you want to learn more about Javascript go here <a href="javascript.html">Javascript Page</a></h5>
         </details>
         <br><br><br><br><br>
         <details>
             <summary><p id="c++"><span id="arrow3">▶</span>C++</p></summary>
-            this is C++.
+            C++ is mainly used for programming systems and complicated games.
             <br><br><br> <h5>If you want to learn more about C++ go here <a href="c++.html">C++ Page</a></h5>
         </details>
         <br><br><br><br><br>
